syntax = "proto3";
option csharp_namespace = "Ozon.Route256.Five.Orders.Grpc";

import "google/protobuf/timestamp.proto";

service Orders
{
  rpc GetOrder (GetOrderRequest) returns (Order);
}

message GetOrderRequest {
  int64 order_id = 1;
}

message Order {
  int64 id = 1;
  int32 goods_count = 2;
  double total_price = 3;
  double total_weight = 4;
  string order_type = 5;
  google.protobuf.Timestamp date_created = 6;
  string state = 7;
  string customer_name = 8;
  Address delivery_address = 9;
  string phone = 10;
}

message Address {
  string region = 1;
  string city = 2;
  string street = 3;
  string building = 4;
  string apartment = 5;
  double latitude = 6;
  double longitude = 7;
}
